--- a/2.1
+++ b/2.1
@@ -1,42 +1,38 @@
 const Course = ({ course }) => {
-  const totalExercises = course.parts.reduce((sum, part) => sum + part.exercises, 0);
-
   return (
     <div>
       <Header name={course.name} />
       <Content parts={course.parts} />
-      <Total total={totalExercises} />
     </div>
   );
 };
 
-const App = () => {
-  const courses = [
-    {
-      name: 'Half Stack application development',
-      id: 1,
-      parts: [
-        { name: 'Fundamentals of React', exercises: 10, id: 1 },
-        { name: 'Using props to pass data', exercises: 7, id: 2 },
-        { name: 'State of a component', exercises: 14, id: 3 },
-        { name: 'Redux', exercises: 11, id: 4 }
-      ]
-    },
-    {
-      name: 'Node.js',
-      id: 2,
-      parts: [
-        { name: 'Routing', exercises: 3, id: 1 },
-        { name: 'Middlewares', exercises: 7, id: 2 }
-      ]
-    }
-  ];
+const Header = ({ name }) => <h1>{name}</h1>;
 
+const Content = ({ parts }) => {
   return (
     <div>
-      {courses.map(course => <Course key={course.id} course={course} />)}
+      {parts.map(part => (
+        <Part key={part.id} part={part} />
+      ))}
     </div>
   );
+};
+
+const Part = ({ part }) => <p>{part.name} {part.exercises}</p>;
+
+const App = () => {
+  const course = {
+    id: 1,
+    name: 'Half Stack application development',
+    parts: [
+      { name: 'Fundamentals of React', exercises: 10, id: 1 },
+      { name: 'Using props to pass data', exercises: 7, id: 2 },
+      { name: 'State of a component', exercises: 14, id: 3 }
+    ]
+  };
+
+  return <Course course={course} />;
 };
 
 export default App;
